# qdot-autoresearch

./: .gitignore  README.md  pyproject.toml  thesis_sections.docx  thesis_sections.md
colab/: README.md  colab_commands.md
configs/: baseline.yaml  dense_eval_50_100.yaml  high_density_0_200_640_t4.yaml  high_density_0_500_640_t4.yaml  high_density_0_999_640.yaml  noisy_eval_5_20.yaml  small_dot_eval_5_20.yaml  sparse_eval_1_5.yaml
qdot_autoresearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/: results.tsv
saved_models/high_density_0_500_640_t4/: README.md  eval_best.json  metrics.json
src/: __init__.py  config.py  data.py  eval.py  gui.py  metrics.py  model.py  predict.py  train.py
src/qdot_autoresearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
